[tool.poetry]
name = "pyaioapp"
version = "1.0.1"
description = "Simple and lightweight application wrapper."
license = "MIT"
authors = ["ticdenis <denisnavarroalcaide@outlook.es>"]
readme = "README.md"
repository = "https://github.com/ticdenis/python-aioapp"
documentation = "https://github.com/ticdenis/python-aioapp/blob/master/README.md"
keywords = ["asyncio", "async", "aio", "application", "app"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
